finish auth service: add full reset-password flow
